# plank-extend-fastapi

./: pyproject.toml
plank/decorator/: fastapi.py
plank/descriptor/: fastapi.py
plank/server/: fastapi.py
plank/server/action/: fastapi.py
plank/server/backend/: fastapi.py
plank/server/fastapi/: __init__.py  action.py  interface.py
plank/support/fastapi/: builtin.py  settings.py  swagger.py
plank_server_fastapi/: decorator.py  scheme.py  server.py  service.py
plank_server_fastapi/support/: builtin.py  settings.py
polymath/app/: _fastapi.py
polymath/decorator/: fastapi.py
polymath/descriptor/: fastapi.py
polymath/launcher/: listener.py
polymath/server/: fastapi.py
polymath/server/backend/: fastapi.py
polymath/support/fastapi/: __init__.py  builtin.py  settings.py  swagger.py
polymath/support/fastapi/builtin_apis/: swagger.py  version.py
