[tool.poetry]
name = "plank-extend-fastapi"
version = "0.1.0.dev208"
description = ""
authors = ["Grady Zhuo <gradyzhuo@gmail.com>"]

packages = [
    { include = "plank" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
polymath = {git = "https://github.com/ospark-org/polymoath.git", rev = "main"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
