[tool.poetry]
name = "plank-server-fastapi"
version = "0.1.1.dev257"
description = ""
authors = ["Grady Zhuo <grady@ospark.org>"]
license = "Apache License 2.0"

packages = [
    { include = "plank_server_fastapi" }
]

[tool.poetry.dependencies]
python = "^3.8"
plank = { git = "https://github.com/ospark-org/plank.git",  branch = "version/1.1"}
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
